--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="./school.jpg" style="width:100%">
-    <img src="./temple.jpg" style="width:100%">
-    <img src="./river.jpg" style="width:100%">
-    <img src="./stud1.jpg" style="width:100%">
-    <img src="./stud2.jpg" style="width:100%">
-    <img src="./uma sir.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/school.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/temple.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/river.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud1.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud2.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/uma sir.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
     <img src="" style="width:100%">
-    <img src="./stud1991.jpg" style="width:100%">
-    <img src="./stud4.jpg" style="width:100%">
-    <img src="./stud5.jpg" style="width:100%">
-    <img src="./stud6.jpg" style="width:100%">
-    <img src="./stud7.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud1991.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud4.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud5.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud6.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud7.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="./stud8.jpg" style="width:100%">
-    <img src="./stud-2003.jpg" style="width:100%">
-    <img src="./uma sir.jpg" style="width:100%">
-    <img src="./stud3.jpg" style="width:100%">
-    <img src="./stud-2003-3.jpg" style="width:100%">
-    <img src="./stud-2003-4.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud8.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud-2003.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/uma sir.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud3.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud-2003-3.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud-2003-4.jpg" style="width:100%">
   </div>
 </div>
 
