--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@ img {margin-bottom: -7px}
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom">
-  <h1><b>Beechupally Old Students Organization</b></h1>
+  <h1><b>Beechupally Old Students Association</b></h1>
   <p><b></b></p>
   <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Comming Soon..</button></p>
 </header>
 </div>
 
 <!-- Photo Grid -->
-<div class="w3-row" id="myGrid" style="margin-bottom:128px">
+<div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
     <img src="https://sv-gie.github.io/bosa/school.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/temple.jpg" style="width:100%">
@@ -87,12 +87,12 @@ img {margin-bottom: -7px}
 <script>
 // Toggle grid padding
 function myFunction() {
-  var x = document.getElementById("myGrid");
-  if (x.className === "w3-row") {
-    x.className = "w3-row-padding";
-  } else { 
-    x.className = x.className.replace("w3-row-padding", "w3-row");
-  }
+  // var x = document.getElementById("myGrid");
+  // if (x.className === "w3-row") {
+  //   x.className = "w3-row-padding";
+  // } else { 
+  //   x.className = x.className.replace("w3-row-padding", "w3-row");
+  // }
 }
 
 // Open and close sidebar
