--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ img {margin-bottom: -7px}
 <header class="w3-center w3-margin-bottom">
   <h1><b>Beechupally Old Students Association</b></h1>
   <p><b></b></p>
-  <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Comming Soon..</button></p>
+  <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">On Ugadi First version ( static website ) <br>On Jan 12-2022 Final Version</button></p>
 </header>
 </div>
 
