--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {margin-bottom: -7px}
     <img src="https://sv-gie.github.io/bosa/river.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/stud1.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/stud2.jpg" style="width:100%">
-    <img src="https://sv-gie.github.io/bosa/uma sir.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/stud3.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
@@ -64,7 +64,7 @@ img {margin-bottom: -7px}
     <img src="https://sv-gie.github.io/bosa/stud8.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/stud-2003.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/uma sir.jpg" style="width:100%">
-    <img src="https://sv-gie.github.io/bosa/stud3.jpg" style="width:100%">
+    <img src="https://sv-gie.github.io/bosa/river-2003.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/stud-2003-3.jpg" style="width:100%">
     <img src="https://sv-gie.github.io/bosa/stud-2003-4.jpg" style="width:100%">
   </div>
